--- a/services.html
+++ b/services.html
@@ -5,8 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home</title>
-  <link rel="stylesheet" href="assets/libs/slick/slick.css">
+  <title>Services</title>
   <link rel="stylesheet" href="assets/css/ui.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/media.css">
@@ -113,223 +112,32 @@
     </div>
   </header>
   <main>
-    <section class="home-top">
+    <section class="page-head">
+      <div class="page-head__bg"><img
+          src="assets/img/services/red-color-lighting-particle-view-modern-luxury-white-car-parked-indoors-daytime%201.jpg"
+          alt="text"></div>
       <div class="container">
-        <div class="home-top__content">
-          <div class="home-top__line"></div>
-          <h1>Сезон персональних пропозицій</h1>
-          <a href="#" class="btn home-top__btn">дізнатися більше</a>
-        </div>
+        <h1>Усі послуги</h1>
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Головна</a></li>
+          <li class="breadcrumbs__item"><span class="breadcrumbs__current">Усі послуги</span></li>
+        </ul>
       </div>
     </section>
-    <section class="home-brands">
-      <div class="home-brands-item">
-        <div class="home-brands-item__icon"><img src="assets/img/home/brand-1.svg" alt="brand name"></div>
-        <h3 class="home-brands-item__title">Skoda</h3>
-        <p class="home-brands-item__description">Lorem ipsum dolor
-          sit amet, consectetur adipiscing elit. </p>
-      </div>
-      <div class="home-brands-item">
-        <div class="home-brands-item__icon"><img src="assets/img/home/brand-2.svg" alt="brand name"></div>
-        <h3 class="home-brands-item__title">Hyundai</h3>
-        <p class="home-brands-item__description">Lorem ipsum dolor
-          sit amet, consectetur adipiscing elit. Orci in sed id consectetur. Suspendisse</p>
-      </div>
-      <div class="home-brands-item">
-        <div class="home-brands-item__icon"><img src="assets/img/home/brand-3.svg" alt="brand name"></div>
-        <h3 class="home-brands-item__title">Seat</h3>
-        <p class="home-brands-item__description">Lorem ipsum dolor
-          sit amet, consectetur adipiscing elit. Orci in sed id consectetur. Suspendisse</p>
-      </div>
-      <div class="home-brands-item">
-        <div class="home-brands-item__icon"><img src="assets/img/home/brand-4.svg" alt="brand name"></div>
-        <h3 class="home-brands-item__title">Ford</h3>
-        <p class="home-brands-item__description">Lorem ipsum dolor
-          sit amet, consectetur adipiscing elit. Orci in sed id consectetur.</p>
-      </div>
-    </section>
-    <section class="home-models">
+    <section class="text-video">
       <div class="container">
-        <h2>Модельний ряд</h2>
-        <div class="cards home-models__items">
-          <a href="#" class="card model">
-            <div class="card__img"><img src="assets/img/home/models-1.jpg" alt="text"></div>
-            <div class="card__content">
-              <h3 class="card__title">Skoda Fabia.<br>Fabia Combi 1,2 TSI</h3>
-              <p class="card__description">2011, 160 тис. км, Бензин, 1.4 л, Механіка</p>
-            </div>
-          </a>
-          <a href="#" class="card model">
-            <div class="card__img"><img src="assets/img/home/models-2.jpg" alt="text"></div>
-            <div class="card__content">
-              <h3 class="card__title">Skoda SUPERB.<br>SUPERB Combi 3.6 FSI</h3>
-              <p class="card__description">2014, 90 тис. км, Дизель, 3.6 л, Автомат</p>
-            </div>
-          </a>
-          <a href="#" class="card model">
-            <div class="card__img"><img src="assets/img/home/models-3.jpg" alt="text"></div>
-            <div class="card__content">
-              <h3 class="card__title">Skoda OKTAVIA A5.<br> Oktavia Combi 1.4 tSI</h3>
-              <p class="card__description">2014, 90 тис. км, Дизель, 1.4 л, Автомат</p>
-            </div>
-          </a>
-          <a href="#" class="card model">
-            <div class="card__img"><img src="assets/img/home/models-4.jpg" alt="text"></div>
-            <div class="card__content">
-              <h3 class="card__title">Skoda roomster 1,6 TDI</h3>
-              <p class="card__description">2009, 199 тис. км, Бензин, 1.6 л, Механіка</p>
-            </div>
-          </a>
-          <a href="#" class="card model">
-            <div class="card__img"><img src="assets/img/home/models-5.jpg" alt="text"></div>
-            <div class="card__content">
-              <h3 class="card__title">Skoda Yeti 1,4 TSI</h3>
-              <p class="card__description">2010, 90 тис. км, Бензин, 1.4 л, Механіка</p>
-            </div>
-          </a>
-          <a href="#" class="card model">
-            <div class="card__img"><img src="assets/img/home/models-6.jpg" alt="text"></div>
-            <div class="card__content">
-              <h3 class="card__title">Hyundai Sonata  2,4 FW</h3>
-              <p class="card__description">2015, 214 тис. км, Бензин, 2.4 л, Механіка</p>
-            </div>
-          </a>
-        </div>
-        <div class="home-models__btn">
-          <a href="#" class="btn btn-regular">показати всі моделі</a>
-        </div>
-      </div>
-    </section>
-    <section class="available">
-      <div class="container">
-        <h2>Автомобілі в наявності</h2>
-        <div class="cards available__items">
-          <div class="card card--small available-item">
-            <div class="card__img"><img src="assets/img/home/available-1.jpg" alt="text"></div>
-            <div class="available-item__content">
-              <h3 class="card__title">Ford Explorer XLT</h3>
-              <p class="available-item__text">207 450 грн.</p>
-              <a href="#">Детальніше</a>
-            </div>
-          </div>
-          <div class="card card--small available-item">
-            <div class="card__img"><img src="assets/img/home/available-2.jpg" alt="text"></div>
-            <div class="available-item__content">
-              <h3 class="card__title">Skoda SUPERB 2.0 TDI Elegans</h3>
-              <p class="available-item__text">207 450 грн.</p>
-              <a href="#">Детальніше</a>
-            </div>
-          </div>
-          <div class="card card--small available-item">
-            <div class="card__img"><img src="assets/img/home/available-3.jpg" alt="text"></div>
-            <div class="available-item__content">
-              <h3 class="card__title">Skoda Kodiaq Scout TDI scr 4x4 2.0</h3>
-              <p class="available-item__text">207 450 грн.</p>
-              <a href="#">Детальніше</a>
-            </div>
-          </div>
-          <div class="card card--small available-item">
-            <div class="card__img"><img src="assets/img/home/available-4.jpg" alt="text"></div>
-            <div class="available-item__content">
-              <h3 class="card__title">seat arona se tsi</h3>
-              <p class="available-item__text">207 450 грн.</p>
-              <a href="#">Детальніше</a>
-            </div>
-          </div>
-        </div>
-        <div class="available__btn">
-          <a href="#" class="btn btn-regular">показати всі моделі</a>
-        </div>
-      </div>
-    </section>
-    <section class="home-shares">
-      <div class="container">
-        <h2>Акції</h2>
-        <p class="home-shares__subtitle">Автотрейдінг пропонує своїм клієнтам найкращі умови для купівлі автомобіля.</p>
-        <div class="cards home-shares__items">
-          <a href="#" class="card share">
-            <div class="card__img"><img src="assets/img/home/shares-1.jpg" alt="text"></div>
-            <p class="share__text-gray">Пропозиція діє до 30.09.2021</p>
-            <h3 class="card__title">Mercedes-Benz GLS-Class 450</h3>
-            <p class="card__description">2017, 55 тис. км, Бензин, 3 л, Автомат</p>
-          </a>
-          <a href="#" class="card share">
-            <div class="card__img"><img src="assets/img/home/shares-2.jpg" alt="text"></div>
-            <p class="share__text-gray">Пропозиція діє до 30.09.2021</p>
-            <h3 class="card__title">Пробний тест-драйв</h3>
-            <p class="card__description">Також всі інші відомі генератори</p>
-          </a>
-          <a href="#" class="card share">
-            <div class="card__img"><img src="assets/img/home/shares-3.jpg" alt="text"></div>
-            <p class="share__text-gray">Пропозиція діє до 30.09.2021</p>
-            <h3 class="card__title">Mercedes-Benz GLS-Class 450</h3>
-            <p class="card__description">2017, 55 тис. км, Бензин, 3 л, Автомат</p>
-          </a>
-        </div>
-      </div>
-    </section>
-    <section class="home-repair">
-      <h2>ТО і ремонт</h2>
-      <p>Запишіться на сервісне обслуговування у будь який зручний для Вас час</p>
-      <a href="#" class="btn btn-regular">записатись на то</a>
-    </section>
-    <section class="home-news">
-      <h2>Новини</h2>
-      <div class="home-news__items">
-        <div>
-          <div class="home-news-item">
-            <div class="home-news-item__img"><img src="assets/img/home/news-1.jpg" alt="text"></div>
-            <div class="home-news-item__date">03/02/2021</div>
-            <a href="#" class="home-news-item__title">Створіть свій ідеальний автомобіль</a>
-          </div>
-        </div>
-        <div>
-          <div class="home-news-item">
-            <div class="home-news-item__img"><img src="assets/img/home/news-2.jpg" alt="text"></div>
-            <div class="home-news-item__date">03/02/2021</div>
-            <a href="#" class="home-news-item__title">НОВиЙ MAZDA CX-9</a>
-          </div>
-        </div>
-        <div>
-          <div class="home-news-item">
-            <div class="home-news-item__img"><img src="assets/img/home/news-3.jpg" alt="text"></div>
-            <div class="home-news-item__date">03/02/2021</div>
-            <a href="#" class="home-news-item__title">КРЕДИТ ДЛЯ ЛОЯЛЬНиХ КЛієНТіВ</a>
-          </div>
-        </div>
-        <div>
-          <div class="home-news-item">
-            <div class="home-news-item__img"><img src="assets/img/home/news-4.jpg" alt="text"></div>
-            <div class="home-news-item__date">03/02/2021</div>
-            <a href="#" class="home-news-item__title">ТЕХНОЛОГії і досконалість</a>
-          </div>
-        </div>
-        <div>
-          <div class="home-news-item">
-            <div class="home-news-item__img"><img src="assets/img/home/news-1.jpg" alt="text"></div>
-            <div class="home-news-item__date">03/02/2021</div>
-            <a href="#" class="home-news-item__title">Створіть свій ідеальний автомобіль</a>
-          </div>
-        </div>
-        <div>
-          <div class="home-news-item">
-            <div class="home-news-item__img"><img src="assets/img/home/news-2.jpg" alt="text"></div>
-            <div class="home-news-item__date">03/02/2021</div>
-            <a href="#" class="home-news-item__title">НОВиЙ MAZDA CX-9</a>
-          </div>
-        </div>
-        <div>
-          <div class="home-news-item">
-            <div class="home-news-item__img"><img src="assets/img/home/news-3.jpg" alt="text"></div>
-            <div class="home-news-item__date">03/02/2021</div>
-            <a href="#" class="home-news-item__title">КРЕДИТ ДЛЯ ЛОЯЛЬНиХ КЛієНТіВ</a>
-          </div>
-        </div>
-        <div>
-          <div class="home-news-item">
-            <div class="home-news-item__img"><img src="assets/img/home/news-4.jpg" alt="text"></div>
-            <div class="home-news-item__date">03/02/2021</div>
-            <a href="#" class="home-news-item__title">ТЕХНОЛОГії і досконалість</a>
+        <p>Lorem ipsum — класичний варіант умовного беззмістовного тексту, що вставляється в макет сторінки (у сленгу
+          дизайнерів такий текст називається «рибою»). Lorem ipsum — це перекручений уривок з філософського трактату
+          Цицерона «Про межі добра і зла», написаного в 45 році до нашої ери латиною. З точки зору зручності сприйняття
+          друкованих текстів Lorem ipsum показує, що латинська графіка найслушніше пристосовується для написання саме
+          творів латинською мовою (тут враховується частота вживання символів з виносними елементами, таких як g, l, h,
+          p).</p>
+        <div class="text-video__video">
+          <img src="assets/img/services/car.jpg" alt="text">
+          <div class="video-btn">
+            <svg width="18" height="22" viewBox="0 0 18 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M18 11L-9.78799e-07 21.3923L-7.02746e-08 0.607695L18 11Z" fill="white"/>
+            </svg>
           </div>
         </div>
       </div>
@@ -415,13 +223,6 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="home-accessories">
-      <h2>Аксесуари</h2>
-      <p>Завжди прагнемо пропонувати своїм клієнтам лише якісні запасні частини та аксесуари. Впевненість в своєму
-        автомобілі, яку забезпечують оригінальні аксесуари від відомих виробників, дозволить отримувати справжнє
-        задоволення від подорожі.</p>
-      <a href="#" class="btn btn-regular">Детальніше</a>
     </section>
     <section class="seo-text">
       <div class="seo-text__shadow"></div>
@@ -534,7 +335,6 @@
   </footer>
 </div>
 <script src="assets/js/jquery-3.5.1.min.js"></script>
-<script src="assets/libs/slick/slick.min.js"></script>
 <script src="assets/js/custom.js"></script>
 </body>
 </html>
