--- a/404.html
+++ b/404.html
@@ -131,7 +131,7 @@
         </svg>
       </div>
       <h2>Двигун не завівся</h2>
-      <p class="error-page__subtitle">Спробуємо пошукати несправність або перейдемо на головну сторінку</p>
+      <p class="error-page__subtitle">Спробуємо пошукати несправність або перейдемо на <a href="#">головну сторінку</a></p>
       <form action="" method="get" class="error-page-form">
         <input type="text" name="s1" id="s1" class="inp" placeholder="Введіть запит" required>
         <button class="btn error-page__submit" type="submit">
