--- a/brands.html
+++ b/brands.html
@@ -113,8 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg"><img
-          src="assets/img/brands/headlights-new-red-car-car-dealership%201.jpg" alt="text"></div>
+      <div class="page-head__bg" style="background: transparent url(./assets/img/brands/headlights-new-red-car-car-dealership%201.jpg) center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Бренди</h1>
         <ul class="breadcrumbs">
