--- a/car-sold.html
+++ b/car-sold.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Car</title>
+  <title>Car Sold out</title>
   <link rel="stylesheet" href="assets/libs/slick/slick.css">
   <link rel="stylesheet" href="assets/css/ui.css">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -124,13 +124,13 @@
         </ul>
       </div>
     </section>
-    <section class="car">
+    <section class="car sold-out">
       <div class="container">
         <h2>Skoda FabiaCombi 1,2 TSI</h2>
         <div class="car__inner">
           <div class="car-top">
             <div class="car-top__title">Опис</div>
-            <div class="car-stock car-stock--in">В наявності</div>
+            <div class="car-stock car-stock--in">Продано</div>
             <div class="car-top__price">157 662 <span>грн</span></div>
           </div>
           <div class="car-media">
