--- a/offers.html
+++ b/offers.html
@@ -113,8 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg"><img
-          src="assets/img/offers/front-right-side-blue-sedan-car%201.jpg" alt="text"></div>
+      <div class="page-head__bg" style="background: transparent url('./assets/img/offers/front-right-side-blue-sedan-car%201.jpg') center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Акції</h1>
         <ul class="breadcrumbs">
