--- a/service.html
+++ b/service.html
@@ -113,9 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg"><img
-          src="assets/img/service/powerful-headlights-particle-view-modern-luxury-cars-parked-indoors-daytime%202.jpg"
-          alt="text"></div>
+      <div class="page-head__bg" style="background: transparent url(./assets/img/service/powerful-headlights-particle-view-modern-luxury-cars-parked-indoors-daytime%202.jpg) center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Автомобілі</h1>
         <ul class="breadcrumbs">
