--- a/article.html
+++ b/article.html
@@ -113,9 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg"><img
-          src="assets/img/article/bright-color-particle-view-modern-luxury-white-car-parked-indoors-daytime%201.jpg"
-          alt="text"></div>
+      <div class="page-head__bg" style="background: transparent url('./assets/img/article/bright-color-particle-view-modern-luxury-white-car-parked-indoors-daytime%201.jpg') center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Tesla model Y. Нове покоління eлектрокросоверів</h1>
         <ul class="breadcrumbs">
