--- a/contacts.html
+++ b/contacts.html
@@ -113,8 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg"><img
-          src="assets/img/contacts/bg%201.jpg" alt="text"></div>
+      <div class="page-head__bg" style="background: transparent url('./assets/img/contacts/bg%201.jpg') center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Контакти</h1>
         <ul class="breadcrumbs">
