--- a/news.html
+++ b/news.html
@@ -113,8 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg"><img
-          src="assets/img/news/headlights-hood-black-luxury-car_%201.jpg" alt="text"></div>
+      <div class="page-head__bg" style="background: transparent url('./assets/img/news/headlights-hood-black-luxury-car_%201.jpg') center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Новини</h1>
         <ul class="breadcrumbs">
