--- a/offer.html
+++ b/offer.html
@@ -113,8 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg"><img
-          src="assets/img/offer/front-headlamp-with-brilliant-reflections-body-car%201.jpg" alt="text"></div>
+      <div class="page-head__bg" style="background: transparent url('./assets/img/offer/front-headlamp-with-brilliant-reflections-body-car%201.jpg') center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Вигідна літня діагностика</h1>
         <ul class="breadcrumbs">
