--- a/services.html
+++ b/services.html
@@ -113,9 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg"><img
-          src="assets/img/services/red-color-lighting-particle-view-modern-luxury-white-car-parked-indoors-daytime%201.jpg"
-          alt="text"></div>
+      <div class="page-head__bg" style="background: transparent url(./assets/img/services/red-color-lighting-particle-view-modern-luxury-white-car-parked-indoors-daytime%201.jpg) center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Усі послуги</h1>
         <ul class="breadcrumbs">
