--- a/vacancy.html
+++ b/vacancy.html
@@ -113,7 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg"><img src="assets/img/vacancies/red-sports-tuned-car-rear-view-wheel-close-up%201.jpg" alt="text"></div>
+      <div class="page-head__bg" style="background: transparent url('./assets/img/vacancies/red-sports-tuned-car-rear-view-wheel-close-up%201.jpg') center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Відкрита вакансія</h1>
         <ul class="breadcrumbs">
