--- a/contacts.html
+++ b/contacts.html
@@ -113,7 +113,7 @@
   </header>
   <main>
     <section class="page-head">
-      <div class="page-head__bg" style="background: transparent url('./assets/img/contacts/bg%201.jpg') center center no-repeat;background-size:cover;"></div>
+      <div class="page-head__bg" style="background: transparent url('./assets/img/contacts/bg1.jpg') center center no-repeat;background-size:cover;"></div>
       <div class="container">
         <h1>Контакти</h1>
         <ul class="breadcrumbs">
@@ -270,7 +270,61 @@
         </div>
       </div>
     </section>
-    <div id="map"></div>
+    <section class="contacts-map">
+      <div id="map"></div>
+      <div class="contacts-map-b">
+        <a href="#" class="contacts-map-b__more" target="_blank">
+          <svg width="80" height="46" viewBox="0 0 80 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path opacity="0.65" d="M40.6517 15.0003H38.4087V6.60364C38.4087 6.54804 38.3666 6.2839 38.0301 5.99197C37.6657 5.68613 36.7264 5.15787 34.4834 5.15787V2.93359C36.9647 2.93359 38.7451 3.48966 39.7825 4.57399C40.6096 5.4498 40.6657 6.36731 40.6517 6.64535V15.0003Z" fill="#619DE5"/>
+            <path d="M40.6539 14.9582H38.4109V6.61715C38.3968 6.33911 38.4529 5.4216 39.28 4.5458C40.3034 3.46146 42.0838 2.9054 44.5791 2.9054V5.12967C42.1679 5.12967 41.2567 5.71354 40.9202 6.07498C40.6959 6.31131 40.6539 6.53374 40.6539 6.53374V6.60325V14.9582Z" fill="#619DE5"/>
+            <path d="M49.0248 4.00369L44.2725 0V4.00369V8.02128L49.0248 4.00369Z" fill="#619DE5"/>
+            <path d="M6.63057 38L2.87057 27.984H2.80657C2.83857 28.3147 2.86524 28.7627 2.88657 29.328C2.90791 29.8827 2.91857 30.464 2.91857 31.072V38H1.59057V26.576H3.71857L7.23857 35.936H7.30257L10.8866 26.576H12.9986V38H11.5746V30.976C11.5746 30.4213 11.5852 29.872 11.6066 29.328C11.6386 28.784 11.6652 28.3413 11.6866 28H11.6226L7.81457 38H6.63057ZM19.1622 29.28C20.2075 29.28 20.9809 29.5093 21.4822 29.968C21.9835 30.4267 22.2342 31.1573 22.2342 32.16V38H21.2102L20.9382 36.784H20.8742C20.5009 37.2533 20.1062 37.6 19.6902 37.824C19.2742 38.048 18.7089 38.16 17.9942 38.16C17.2155 38.16 16.5702 37.9573 16.0582 37.552C15.5462 37.136 15.2902 36.4907 15.2902 35.616C15.2902 34.7627 15.6262 34.1067 16.2982 33.648C16.9702 33.1787 18.0049 32.9227 19.4022 32.88L20.8582 32.832V32.32C20.8582 31.6053 20.7035 31.1093 20.3942 30.832C20.0849 30.5547 19.6475 30.416 19.0822 30.416C18.6342 30.416 18.2075 30.4853 17.8022 30.624C17.3969 30.752 17.0182 30.9013 16.6662 31.072L16.2342 30.016C16.6075 29.8133 17.0502 29.6427 17.5622 29.504C18.0742 29.3547 18.6075 29.28 19.1622 29.28ZM20.8422 33.808L19.5782 33.856C18.5115 33.8987 17.7702 34.0693 17.3542 34.368C16.9489 34.6667 16.7462 35.088 16.7462 35.632C16.7462 36.112 16.8902 36.464 17.1782 36.688C17.4769 36.912 17.8555 37.024 18.3142 37.024C19.0289 37.024 19.6262 36.8267 20.1062 36.432C20.5969 36.0267 20.8422 35.408 20.8422 34.576V33.808ZM28.9629 29.264C30.0189 29.264 30.8669 29.632 31.5069 30.368C32.1576 31.104 32.4829 32.2133 32.4829 33.696C32.4829 35.1573 32.1576 36.2667 31.5069 37.024C30.8669 37.7813 30.0136 38.16 28.9469 38.16C28.2856 38.16 27.7363 38.0373 27.2989 37.792C26.8723 37.5467 26.5363 37.2533 26.2909 36.912H26.1949C26.2056 37.0933 26.2216 37.3227 26.2429 37.6C26.2749 37.8773 26.2909 38.1173 26.2909 38.32V41.84H24.8829V29.424H26.0349L26.2269 30.592H26.2909C26.5469 30.2187 26.8829 29.904 27.2989 29.648C27.7149 29.392 28.2696 29.264 28.9629 29.264ZM28.7069 30.448C27.8323 30.448 27.2136 30.6933 26.8509 31.184C26.4883 31.6747 26.3016 32.4213 26.2909 33.424V33.696C26.2909 34.752 26.4616 35.568 26.8029 36.144C27.1549 36.7093 27.8003 36.992 28.7389 36.992C29.2509 36.992 29.6776 36.8533 30.0189 36.576C30.3603 36.288 30.6109 35.8933 30.7709 35.392C30.9416 34.8907 31.0269 34.32 31.0269 33.68C31.0269 32.6987 30.8349 31.9147 30.4509 31.328C30.0776 30.7413 29.4963 30.448 28.7069 30.448ZM46.3587 29.424V38H34.7267V29.424H36.1347V36.816H39.8307V29.424H41.2387V36.816H44.9507V29.424H46.3587ZM53.1817 29.264C54.2377 29.264 55.0857 29.632 55.7257 30.368C56.3764 31.104 56.7017 32.2133 56.7017 33.696C56.7017 35.1573 56.3764 36.2667 55.7257 37.024C55.0857 37.7813 54.2324 38.16 53.1657 38.16C52.5044 38.16 51.955 38.0373 51.5177 37.792C51.091 37.5467 50.755 37.2533 50.5097 36.912H50.4137C50.4244 37.0933 50.4404 37.3227 50.4617 37.6C50.4937 37.8773 50.5097 38.1173 50.5097 38.32V41.84H49.1017V29.424H50.2537L50.4457 30.592H50.5097C50.7657 30.2187 51.1017 29.904 51.5177 29.648C51.9337 29.392 52.4884 29.264 53.1817 29.264ZM52.9257 30.448C52.051 30.448 51.4324 30.6933 51.0697 31.184C50.707 31.6747 50.5204 32.4213 50.5097 33.424V33.696C50.5097 34.752 50.6804 35.568 51.0217 36.144C51.3737 36.7093 52.019 36.992 52.9577 36.992C53.4697 36.992 53.8964 36.8533 54.2377 36.576C54.579 36.288 54.8297 35.8933 54.9897 35.392C55.1604 34.8907 55.2457 34.32 55.2457 33.68C55.2457 32.6987 55.0537 31.9147 54.6697 31.328C54.2964 30.7413 53.715 30.448 52.9257 30.448ZM57.4452 29.424H58.9492L60.8052 34.304C60.9652 34.7413 61.1092 35.152 61.2372 35.536C61.3652 35.92 61.4612 36.288 61.5252 36.64H61.5892C61.6532 36.3733 61.7545 36.0267 61.8932 35.6C62.0319 35.1627 62.1759 34.7253 62.3252 34.288L64.0692 29.424H65.5892L61.8932 39.184C61.5839 39.9947 61.1945 40.64 60.7252 41.12C60.2559 41.6 59.6052 41.84 58.7732 41.84C58.5172 41.84 58.2932 41.824 58.1012 41.792C57.9092 41.7707 57.7439 41.744 57.6052 41.712V40.592C57.7225 40.6133 57.8612 40.6347 58.0212 40.656C58.1919 40.6773 58.3679 40.688 58.5492 40.688C59.0399 40.688 59.4345 40.5493 59.7332 40.272C60.0319 39.9947 60.2719 39.6267 60.4532 39.168L60.9012 38.032L57.4452 29.424ZM67.7134 36.08C68.0228 36.08 68.2734 36.176 68.4654 36.368C68.6574 36.56 68.7534 36.8107 68.7534 37.12C68.7534 37.4293 68.6574 37.68 68.4654 37.872C68.2734 38.064 68.0228 38.16 67.7134 38.16C67.4041 38.16 67.1534 38.064 66.9614 37.872C66.7694 37.68 66.6734 37.4293 66.6734 37.12C66.6734 36.8107 66.7694 36.56 66.9614 36.368C67.1534 36.176 67.4041 36.08 67.7134 36.08ZM71.9634 36.08C72.2728 36.08 72.5234 36.176 72.7154 36.368C72.9074 36.56 73.0034 36.8107 73.0034 37.12C73.0034 37.4293 72.9074 37.68 72.7154 37.872C72.5234 38.064 72.2728 38.16 71.9634 38.16C71.6541 38.16 71.4034 38.064 71.2114 37.872C71.0194 37.68 70.9234 37.4293 70.9234 37.12C70.9234 36.8107 71.0194 36.56 71.2114 36.368C71.4034 36.176 71.6541 36.08 71.9634 36.08ZM76.2134 36.08C76.5228 36.08 76.7734 36.176 76.9654 36.368C77.1574 36.56 77.2534 36.8107 77.2534 37.12C77.2534 37.4293 77.1574 37.68 76.9654 37.872C76.7734 38.064 76.5228 38.16 76.2134 38.16C75.9041 38.16 75.6534 38.064 75.4614 37.872C75.2694 37.68 75.1734 37.4293 75.1734 37.12C75.1734 36.8107 75.2694 36.56 75.4614 36.368C75.6534 36.176 75.9041 36.08 76.2134 36.08Z" fill="#619DE5"/>
+          </svg>
+        </a>
+        <div class="contacts-map-b__title">Автосалон</div>
+        <div class="contacts-map-b__row">
+          <div class="contacts-map-b__item">
+            <svg width="17" height="22" viewBox="0 0 17 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8.61985 11.771C10.2762 11.771 11.6189 10.3934 11.6189 8.69411C11.6189 6.99477 10.2762 5.61719 8.61985 5.61719C6.96355 5.61719 5.62085 6.99477 5.62085 8.69411C5.62085 10.3934 6.96355 11.771 8.61985 11.771Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M16.1198 8.69231C16.1198 15.6154 8.62226 21 8.62226 21C8.62226 21 1.12476 15.6154 1.12476 8.69231C1.12476 6.65218 1.91467 4.69561 3.32072 3.25302C4.72678 1.81044 6.6338 1 8.62226 1C10.6107 1 12.5177 1.81044 13.9238 3.25302C15.3299 4.69561 16.1198 6.65218 16.1198 8.69231V8.69231Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <span>Харків, просп. Перемоги, 67</span>
+          </div>
+        </div>
+        <div class="contacts-map-b__row">
+          <div class="contacts-map-b__item">
+            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.40882 8.55338C6.08628 9.93886 7.20897 11.0568 8.59706 11.7282C8.69862 11.7763 8.81096 11.7972 8.92302 11.7887C9.03509 11.7802 9.14302 11.7427 9.23618 11.6798L11.28 10.3165C11.3704 10.2562 11.4744 10.2194 11.5826 10.2094C11.6908 10.1995 11.7998 10.2167 11.8996 10.2595L15.7233 11.8988C15.8532 11.954 15.9617 12.0499 16.0323 12.1721C16.103 12.2943 16.132 12.4362 16.1151 12.5763C15.9942 13.5224 15.5328 14.3919 14.8172 15.0221C14.1016 15.6523 13.1809 15.9999 12.2275 16C9.28289 16 6.45886 14.8299 4.37668 12.747C2.29451 10.6641 1.12476 7.83915 1.12476 4.89353C1.12481 3.93983 1.47237 3.01884 2.10236 2.30301C2.73235 1.58719 3.60157 1.12561 4.54727 1.00472C4.68737 0.987757 4.82919 1.0168 4.95135 1.08748C5.07352 1.15815 5.16942 1.26663 5.22459 1.39657L6.86474 5.22486C6.90717 5.32388 6.92445 5.43186 6.91506 5.53918C6.90567 5.6465 6.8699 5.74984 6.81092 5.83998L5.45276 7.91589C5.39094 8.00927 5.3544 8.1171 5.3467 8.22883C5.339 8.34057 5.3604 8.45239 5.40882 8.55338V8.55338Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <a href="tel:8 (044) 496 33 83">8 (044) 496 33 83</a>
+          </div>
+          <div class="contacts-map-b__item">
+            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.40882 8.55338C6.08628 9.93886 7.20897 11.0568 8.59706 11.7282C8.69862 11.7763 8.81096 11.7972 8.92302 11.7887C9.03509 11.7802 9.14302 11.7427 9.23618 11.6798L11.28 10.3165C11.3704 10.2562 11.4744 10.2194 11.5826 10.2094C11.6908 10.1995 11.7998 10.2167 11.8996 10.2595L15.7233 11.8988C15.8532 11.954 15.9617 12.0499 16.0323 12.1721C16.103 12.2943 16.132 12.4362 16.1151 12.5763C15.9942 13.5224 15.5328 14.3919 14.8172 15.0221C14.1016 15.6523 13.1809 15.9999 12.2275 16C9.28289 16 6.45886 14.8299 4.37668 12.747C2.29451 10.6641 1.12476 7.83915 1.12476 4.89353C1.12481 3.93983 1.47237 3.01884 2.10236 2.30301C2.73235 1.58719 3.60157 1.12561 4.54727 1.00472C4.68737 0.987757 4.82919 1.0168 4.95135 1.08748C5.07352 1.15815 5.16942 1.26663 5.22459 1.39657L6.86474 5.22486C6.90717 5.32388 6.92445 5.43186 6.91506 5.53918C6.90567 5.6465 6.8699 5.74984 6.81092 5.83998L5.45276 7.91589C5.39094 8.00927 5.3544 8.1171 5.3467 8.22883C5.339 8.34057 5.3604 8.45239 5.40882 8.55338V8.55338Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <a href="tel:8 (044) 496 33 84">8 (044) 496 33 84</a>
+          </div>
+        </div>
+        <div class="contacts-map-b__row">
+          <div class="contacts-map-b__item">
+            <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.12842 1H21.1218V15.1667C21.1218 15.3877 21.034 15.5996 20.8778 15.7559C20.7215 15.9122 20.5097 16 20.2887 16H1.96147C1.74053 16 1.52864 15.9122 1.37241 15.7559C1.21619 15.5996 1.12842 15.3877 1.12842 15.1667V1Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M21.1218 1L11.1251 10.1667L1.12842 1" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <a href="mailto:info@dealer.ua">info@dealer.ua</a>
+          </div>
+        </div>
+        <div class="contacts-map-b__row">
+          <div class="contacts-map-b__item">
+            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-bottom: auto; margin-top: 4px;">
+              <path d="M8.62226 16C12.763 16 16.1198 12.6421 16.1198 8.5C16.1198 4.35786 12.763 1 8.62226 1C4.4815 1 1.12476 4.35786 1.12476 8.5C1.12476 12.6421 4.4815 16 8.62226 16Z" stroke="white" stroke-miterlimit="10"/>
+              <path d="M8.62085 4.125V8.5H12.9944" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <span>Пн - Пт: 09:00 - 19:00<br>Сб: 09:00 - 15:00</span>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
@@ -359,85 +413,196 @@
       center: { lat: 40.674, lng: -73.945 },
       zoom: 12,
       styles: [
-        { elementType: "geometry", stylers: [{ color: "#242f3e" }] },
-        { elementType: "labels.text.stroke", stylers: [{ color: "#242f3e" }] },
-        { elementType: "labels.text.fill", stylers: [{ color: "#746855" }] },
         {
-          featureType: "administrative.locality",
-          elementType: "labels.text.fill",
-          stylers: [{ color: "#d59563" }],
+          "elementType": "geometry",
+          "stylers": [
+            {
+              "color": "#212121"
+            }
+          ]
         },
         {
-          featureType: "poi",
-          elementType: "labels.text.fill",
-          stylers: [{ color: "#d59563" }],
+          "elementType": "labels.icon",
+          "stylers": [
+            {
+              "visibility": "off"
+            }
+          ]
         },
         {
-          featureType: "poi.park",
-          elementType: "geometry",
-          stylers: [{ color: "#263c3f" }],
+          "elementType": "labels.text.fill",
+          "stylers": [
+            {
+              "color": "#757575"
+            }
+          ]
         },
         {
-          featureType: "poi.park",
-          elementType: "labels.text.fill",
-          stylers: [{ color: "#6b9a76" }],
+          "elementType": "labels.text.stroke",
+          "stylers": [
+            {
+              "color": "#212121"
+            }
+          ]
         },
         {
-          featureType: "road",
-          elementType: "geometry",
-          stylers: [{ color: "#38414e" }],
+          "featureType": "administrative",
+          "elementType": "geometry",
+          "stylers": [
+            {
+              "color": "#757575"
+            }
+          ]
         },
         {
-          featureType: "road",
-          elementType: "geometry.stroke",
-          stylers: [{ color: "#212a37" }],
+          "featureType": "administrative.country",
+          "elementType": "labels.text.fill",
+          "stylers": [
+            {
+              "color": "#9e9e9e"
+            }
+          ]
         },
         {
-          featureType: "road",
-          elementType: "labels.text.fill",
-          stylers: [{ color: "#9ca5b3" }],
+          "featureType": "administrative.land_parcel",
+          "stylers": [
+            {
+              "visibility": "off"
+            }
+          ]
         },
         {
-          featureType: "road.highway",
-          elementType: "geometry",
-          stylers: [{ color: "#746855" }],
+          "featureType": "administrative.locality",
+          "elementType": "labels.text.fill",
+          "stylers": [
+            {
+              "color": "#bdbdbd"
+            }
+          ]
         },
         {
-          featureType: "road.highway",
-          elementType: "geometry.stroke",
-          stylers: [{ color: "#1f2835" }],
+          "featureType": "poi",
+          "elementType": "labels.text.fill",
+          "stylers": [
+            {
+              "color": "#757575"
+            }
+          ]
         },
         {
-          featureType: "road.highway",
-          elementType: "labels.text.fill",
-          stylers: [{ color: "#f3d19c" }],
+          "featureType": "poi.park",
+          "elementType": "geometry",
+          "stylers": [
+            {
+              "color": "#181818"
+            }
+          ]
         },
         {
-          featureType: "transit",
-          elementType: "geometry",
-          stylers: [{ color: "#2f3948" }],
+          "featureType": "poi.park",
+          "elementType": "labels.text.fill",
+          "stylers": [
+            {
+              "color": "#616161"
+            }
+          ]
         },
         {
-          featureType: "transit.station",
-          elementType: "labels.text.fill",
-          stylers: [{ color: "#d59563" }],
+          "featureType": "poi.park",
+          "elementType": "labels.text.stroke",
+          "stylers": [
+            {
+              "color": "#1b1b1b"
+            }
+          ]
         },
         {
-          featureType: "water",
-          elementType: "geometry",
-          stylers: [{ color: "#17263c" }],
+          "featureType": "road",
+          "elementType": "geometry.fill",
+          "stylers": [
+            {
+              "color": "#2c2c2c"
+            }
+          ]
         },
         {
-          featureType: "water",
-          elementType: "labels.text.fill",
-          stylers: [{ color: "#515c6d" }],
+          "featureType": "road",
+          "elementType": "labels.text.fill",
+          "stylers": [
+            {
+              "color": "#8a8a8a"
+            }
+          ]
         },
         {
-          featureType: "water",
-          elementType: "labels.text.stroke",
-          stylers: [{ color: "#17263c" }],
+          "featureType": "road.arterial",
+          "elementType": "geometry",
+          "stylers": [
+            {
+              "color": "#373737"
+            }
+          ]
         },
+        {
+          "featureType": "road.highway",
+          "elementType": "geometry",
+          "stylers": [
+            {
+              "color": "#3c3c3c"
+            }
+          ]
+        },
+        {
+          "featureType": "road.highway.controlled_access",
+          "elementType": "geometry",
+          "stylers": [
+            {
+              "color": "#4e4e4e"
+            }
+          ]
+        },
+        {
+          "featureType": "road.local",
+          "elementType": "labels.text.fill",
+          "stylers": [
+            {
+              "color": "#616161"
+            }
+          ]
+        },
+        {
+          "featureType": "transit",
+          "elementType": "labels.text.fill",
+          "stylers": [
+            {
+              "color": "#757575"
+            }
+          ]
+        },
+        {
+          "featureType": "water",
+          "elementType": "geometry",
+          "stylers": [
+            {
+              "color": "#000000"
+            }
+          ]
+        },
+        {
+          "featureType": "water",
+          "elementType": "labels.text.fill",
+          "stylers": [
+            {
+              "color": "#3d3d3d"
+            }
+          ]
+        }
       ],
+    });
+    var marker = new google.maps.Marker({
+      position: { lat: 40.674, lng: -73.945 },
+      map: map,
+      icon: './assets/img/contacts/map-marker.png'
     });
   }
 </script>
